src/Test/Fixtures/Bad/Types/unexpectedFloatAfterInferredInitializer.lf
let f = -1000.0 7.89;